# capri_theme

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
capri_theme/: __init__.py  hooks.py  modules.txt  pyproject.toml
capri_theme/capri_theme/: utils.py
capri_theme/config/: desktop.py  docs.py
capri_theme/public/css/: capri_theme.css
capri_theme/public/js/: capri_theme.js
capri_theme/www/themes/: capri_turquoise.json
