[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capri_theme"
authors = [
    {name = "firmans", email = "miftah.mykitchenindonesia.com"},
]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "frappe",
]

[project.urls]
Home = "https://github.com/yourusername/capri_theme"